# signal-rs

./: .env  .gitignore  Cargo.toml  README.md
migrations/2021-08-29-154046_create_messages/: up.sql
migrations/2021-08-31-020348_create_attachments/: down.sql  up.sql
src/: app.rs  database.rs  main.rs  models.rs  schema.rs  signal_type_utils.rs  signald_bridge.rs
src/app/: conversation.rs  link_device.rs  main_view.rs  media_viewer.rs  message_input.rs  mod.rs  notifications.rs
src/app/message/: imp.rs  mod.rs  ui.rs  url_detect.rs
src/chat/: conversation.rs  link_device.rs  load_app.rs  main_view.rs  mod.rs
style/: style.css
