[package]
name = "signal-rs"
version = "0.1.0"
authors = ["zschira <zasc3143@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.3", package = "gtk4" }
adw = { version = "0.1.0-alpha-5", package = "libadwaita" }
signald = { git = "https://github.com/zschira/signald-rs", branch = "main" }
#signald = { path = "../signald-rs" }
async-std = { version = "1.9.0", features = ["attributes"] }
uuid = { version = "0.8", features = ["v4"] }
qrcode = { version = "0.12" }
image = "0.23.14"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
chrono = "0.4"
once_cell = "1.8.0"
regex = "1.5.4"
lazy_static = "1.4.0"
